[package]
name = "polymer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rand = "0.8" # For mock data generation
chrono = "0.4.43"
clap = { version = "4.4", features = ["derive"] }
webbrowser = "0.8"
regex = "1.10"
